# OZ_Backend_School_SideProject

./: README.md
custom_MYSQL_Tool/: README.md  main.py  test_notebook.ipynb
custom_MYSQL_Tool/setting/: config.json
custom_MYSQL_Tool/setting/mysqlDDL/: airportdb_DDL.sql
custom_MYSQL_Tool/tools/: temp_tool.py
dummyDataMaker_MySQL/: Test.ipynb  main.py  pyproject.toml
dummyDataMaker_MySQL/tools/: control_table.py
dummyMaker_MYSQL/: README.md  airport_ERD.mwb  pyproject.toml  test.txt  test_notebook.ipynb
dummyMaker_MYSQL/dummymaker_mysql/: dummy_generator.py
dummyMaker_MYSQL/tests/: main.py
dummyMaker_MYSQL_Refactoring/: .gitignore  README.md  command.json  main.py  pyproject.toml  test_notebook.ipynb
dummyMaker_MYSQL_Refactoring/dummymaker_mysql_refactoring/: control_table.py  create_dummy_data.py
dummyMaker_MYSQL_Refactoring/tools/: control_table.py  create_dummy_data.py
