[tool.poetry]
name = "dummymaker-mysql"
version = "0.1.0"
description = ""
authors = ["JoonHoSeong <joonho1366@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^24.11.0"
faker-airtravel = "^0.4"
sqlalchemy = "^2.0.29"
mypysql = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
